--- a/app/views/artists/show.erb
+++ b/app/views/artists/show.erb
@@ -1,9 +1,11 @@
-<h1>Songs:</h1>
-<% @artist.songs.each do |song|%>
-<li><a href="songs/<%=song.slug %>"><%= song.name %></a></li>
-<% end %>
+<ul>
+  <% @artist.songs.each do |song| %>
+    <li><a href="/songs/<%= song.slug %>"><%= song.name %> </a></li>
+  <% end %>
+</ul>
 
-<h1>Genres:</h1>
-<% @artist.genres.each do |genre|%>
-<li><a href="genres/<%=genre.slug %>"><%= genre.name %></a></li>
-<% end %>
+<ul>
+  <% @artist.genres.each do |genre| %>
+    <li><a href="/genres/<%= genre.slug %>"><%= genre.name %> </a></li>
+  <% end %>
+</ul>
